...
                padding: EdgeInsets.all(16),
                child: Column(children: [
                  Row(
                    mainAxisAlignment: MainAxisAlignment.end,
                    children: [
                      IconButton(
                        key: const Key('home.sendMoney'),
                        icon: const Icon(Icons.transform, color: Colors.white),
                        onPressed: () => Navigator.of(context)
                            .pushNamed(SendMoneyScreen.route),
                      ),
                      IconButton(
                        key: const Key('profile_button'),
...
